hphp/test/slow/await_as_an_expression/error/cond2.php.expectf

Fatal error: `await` cannot be used as an expression in this location because it's conditionally executed. in %s/cond2.php on line 15
